fix(style):adds missing border

--- a/public/css/Cis4/CoreCalendarEvents.css
+++ b/public/css/Cis4/CoreCalendarEvents.css
@@ -38,6 +38,7 @@
 	padding: .25rem .5rem .25rem .25rem;
 	margin-right: .25rem;
 	align-content: center;
+	border-right: 1px solid var(--bs-secondary);
 }
 
 
